[gd_scene load_steps=10 format=3 uid="uid://dnnvwlplf1km7"]

[ext_resource type="Script" uid="uid://crp2af6k4nmf5" path="res://addons/gut/gui/GutEditorWindow.gd" id="1_qevl3"]
[ext_resource type="Texture2D" uid="uid://ljc2viafngwd" path="res://addons/gut/images/HSplitContainer.svg" id="2_xw0o2"]
[ext_resource type="Texture2D" uid="uid://bhew20crsywxr" path="res://addons/gut/images/VSplitContainer.svg" id="3_fqfwy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qevl3"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.115499996, 0.132, 0.15949999, 1)
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_af010"]
content_margin_left = 8.0
content_margin_top = 12.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.21, 0.24, 0.29, 1)
border_color = Color(0.08399999, 0.095999986, 0.116, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 5
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xw0o2"]
content_margin_left = 0.0
content_margin_top = 8.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.21, 0.24, 0.29, 1)
border_color = Color(0.08399999, 0.095999986, 0.116, 1)
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 5
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fqfwy"]
content_margin_left = 12.0
content_margin_top = 8.0
content_margin_right = 12.0
content_margin_bottom = 8.0
bg_color = Color(0.14699998, 0.16799998, 0.203, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 5
anti_aliasing = false

[sub_resource type="Theme" id="Theme_fqfwy"]
Editor/colors/accent_color = Color(0.44, 0.73, 0.98, 1)
Editor/colors/background = Color(0.115499996, 0.132, 0.15949999, 1)
Editor/colors/base_color = Color(0.21, 0.24, 0.29, 1)
EditorStyles/styles/Background = SubResource("StyleBoxFlat_qevl3")
EditorStyles/styles/BottomPanel = SubResource("StyleBoxFlat_af010")
EditorStyles/styles/Content = SubResource("StyleBoxFlat_xw0o2")
Panel/styles/panel = SubResource("StyleBoxFlat_fqfwy")

[sub_resource type="ButtonGroup" id="ButtonGroup_qevl3"]

[node name="GutEditorWindow" type="Window"]
oversampling_override = 1.0
title = "GUT"
position = Vector2i(0, 36)
size = Vector2i(1408, 1728)
min_size = Vector2i(800, 600)
script = ExtResource("1_qevl3")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_fqfwy")
color = Color(0.18717614, 0.18717614, 0.18717614, 1)

[node name="Layout" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WinControls" type="HBoxContainer" parent="Layout"]
layout_mode = 2

[node name="MenuBar" type="MenuBar" parent="Layout/WinControls"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
flat = true
prefer_global_menu = false

[node name="CenterContainer" type="CenterContainer" parent="Layout/WinControls"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OnTop" type="CheckButton" parent="Layout/WinControls"]
layout_mode = 2
text = "Always on Top"

[node name="HorizLayout" type="Button" parent="Layout/WinControls"]
texture_filter = 1
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_qevl3")
icon = ExtResource("2_xw0o2")
icon_alignment = 1

[node name="VertLayout" type="Button" parent="Layout/WinControls"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_qevl3")
icon = ExtResource("3_fqfwy")

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="size_changed" from="." to="." method="_on_size_changed"]
[connection signal="toggled" from="Layout/WinControls/OnTop" to="." method="_on_on_top_toggled"]
[connection signal="pressed" from="Layout/WinControls/HorizLayout" to="." method="_on_horiz_layout_pressed"]
[connection signal="pressed" from="Layout/WinControls/VertLayout" to="." method="_on_vert_layout_pressed"]
